--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/grecaptcha": "^3.0.9",
+    "@vueuse/core": "^13.0.0",
     "element-plus": "^2.9.7",
     "vue": "^3.5.13",
     "vue-recaptcha": "^3.0.0-alpha.6",
