FEAT : add about me page + markdwon component
- 마크다운 전용 컴포넌트 추가
- about me 페이지 추가

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/highlight.js": "^10.1.0",
     "@types/marked": "^6.0.0",
     "@vueuse/core": "^13.0.0",
+    "axios": "^1.8.4",
     "element-plus": "^2.9.7",
     "highlight.js": "^11.11.1",
     "marked": "^15.0.7",
