--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/marked": "^6.0.0",
     "@vueuse/core": "^13.0.0",
     "axios": "^1.8.4",
+    "class-transformer": "^0.5.1",
     "element-plus": "^2.9.7",
     "highlight.js": "^11.11.1",
     "marked": "^15.0.7",
     "marked-highlight": "^2.2.1",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.9.1",
     "vue": "^3.5.13",
     "vue-recaptcha": "^3.0.0-alpha.6",
     "vue-router": "^4.5.0"
