--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^13.0.0",
     "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
+    "dompurify": "^3.2.5",
     "element-plus": "^2.9.7",
     "highlight.js": "^11.11.1",
     "marked": "^15.0.7",
@@ -26,6 +27,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.2.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
