--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "http://heojineee.ddnsking.com:1400/api/:path*" }
+    { "source": "/api/:path*", "destination": "http://heojineee.ddnsking.com:1400/:path*" }
   ]
 }
