--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "http://heojineee.ddnsking.com:1400/:path*" }
+    {
+      "source": "/api/:path*",
+      "destination": "http://heojineee.ddnsking.com:1400/:path*"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+      ]
+    }
   ]
 }
