--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "http://heojineee.ddnsking.com:1400/:path*"
+      "destination": "${BACK_SPRING_URL}/:path*"
     }
   ],
   "headers": [
