--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,25 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "http://heojineee.ddnsking.com:1400/:path*"
+      "destination": "http://heojineee.ddnsking.com:1400/api/:path*"
     }
   ],
   "headers": [
     {
       "source": "/api/(.*)",
       "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization, Set-Cookie"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        }
       ]
     }
   ]
