--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-transformer": "^0.5.1",
     "dompurify": "^3.2.5",
     "element-plus": "^2.9.7",
+    "marked": "^15.0.12",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.9.1",
     "vue": "^3.5.13",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.2.0",
+    "@types/marked": "^6.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.7.2",
