--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/api/:path*",
       "destination": "http://heojineee.ddnsking.com:1400/api/:path*"
+    },
+    {
+      "source": "/((?!api).*)",
+      "destination": "/"
     }
   ],
   "headers": [
