--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/marked": "^6.0.0",
     "@vueuse/core": "^13.0.0",
     "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
     "dompurify": "^3.2.5",
     "element-plus": "^2.9.7",
+    "marked": "^15.0.12",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.9.1",
     "vue": "^3.5.13",
