--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-transformer": "^0.5.1",
     "dompurify": "^3.2.5",
     "element-plus": "^2.9.7",
+    "github-markdown-css": "^5.8.1",
     "marked": "^15.0.12",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.9.1",
