--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dompurify": "^3.2.5",
     "element-plus": "^2.9.7",
     "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
     "marked": "^15.0.12",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.9.1",
