--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.0",
+    "vite-plugin-sitemap": "^0.8.2",
     "vue-tsc": "^2.2.4"
   }
 }
