--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,31 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/:path*",
-      "destination": "http://heojineee.ddnsking.com:1400/api/:path*"
-    },
-    {
-      "source": "/((?!api).*)",
-      "destination": "/"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
+    "rewrites": [
         {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
+            "source": "/api/:path*",
+            "destination": "http://heojineee.ddnsking.com/api/:path*"
         },
         {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization, Set-Cookie"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
+            "source": "/((?!api).*)",
+            "destination": "/"
         }
-      ]
-    }
-  ]
+    ],
+    "headers": [
+        {
+            "source": "/api/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type, Authorization, Set-Cookie"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, PUT, DELETE, OPTIONS"
+                }
+            ]
+        }
+    ]
 }
