--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "http://heojineee.ddnsking.com/api/:path*"
+            "destination": "http://heojineee.ddnsking.com:80/api/:path*"
         },
         {
             "source": "/((?!api).*)",
